--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-    <h1>From Day to Night</h1>
+   <center><h1>From Day to Night</h1></center>
     <div class="sun">
 
     </div>
